--- a/pom.xml
+++ b/pom.xml
@@ -1056,22 +1056,22 @@
         <siddhi.io.email.version>2.0.7</siddhi.io.email.version>
         <siddhi.io.rabbitmq.version>3.0.7</siddhi.io.rabbitmq.version>
         <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
-        <siddhi.io.kafka.version>5.0.16-SNAPSHOT</siddhi.io.kafka.version>
+        <siddhi.io.kafka.version>5.0.16</siddhi.io.kafka.version>
         <siddhi.io.http.version>2.3.4</siddhi.io.http.version>
         <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
         <siddhi.io.websocket.version>3.0.2</siddhi.io.websocket.version>
-        <siddhi.io.cdc.version>2.0.11</siddhi.io.cdc.version>
+        <siddhi.io.cdc.version>2.0.12</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
-        <siddhi.io.nats.version>2.0.13</siddhi.io.nats.version>
+        <siddhi.io.nats.version>2.0.14</siddhi.io.nats.version>
         <siddhi.io.googlepubsub.version>2.0.3</siddhi.io.googlepubsub.version>
         <siddhi.io.hl7.version>3.0.1</siddhi.io.hl7.version>
         <siddhi.io.snmp.version>2.0.1</siddhi.io.snmp.version>
         <siddhi.io.grpc.version>1.0.10</siddhi.io.grpc.version>
-        <siddhi.io.gcs.version>1.0.1</siddhi.io.gcs.version>
+        <siddhi.io.gcs.version>1.0.2</siddhi.io.gcs.version>
         <siddhi.io.s3.version>1.0.4</siddhi.io.s3.version>
 
         <siddhi.map.json.version>5.2.2</siddhi.map.json.version>
-        <siddhi.map.avro.version>2.2.2-SNAPSHOT</siddhi.map.avro.version>
+        <siddhi.map.avro.version>2.2.2</siddhi.map.avro.version>
         <siddhi.map.binary.version>2.1.1</siddhi.map.binary.version>
         <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
         <siddhi.map.xml.version>5.2.2</siddhi.map.xml.version>
@@ -1080,7 +1080,7 @@
 
         <siddhi.store.mongodb.version>2.1.2</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
-        <siddhi.store.rdbms.version>7.0.12</siddhi.store.rdbms.version>
+        <siddhi.store.rdbms.version>7.0.13</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
         <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
