--- a/pom.xml
+++ b/pom.xml
@@ -419,7 +419,7 @@
                 <version>${guava.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.quartz-scheduler.wso2</groupId>
+                <groupId>org.wso2.orbit.org.quartz-scheduler</groupId>
                 <artifactId>quartz</artifactId>
                 <version>${quartz.version}</version>
             </dependency>
@@ -504,7 +504,7 @@
                 <version>${javax.servlet.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.ops4j.pax.logging</groupId>
+                <groupId>org.wso2.org.ops4j.pax.logging</groupId>
                 <artifactId>pax-logging-api</artifactId>
                 <version>${pax.logging.api.version}</version>
             </dependency>
@@ -926,7 +926,7 @@
         <carbon.analytics.version>3.0.58</carbon.analytics.version>
         <siddhi.version>5.1.22</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.57</carbon.analytics-common.version>
+        <carbon.analytics-common.version>6.1.58</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -948,13 +948,13 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.2.16</carbon.kernel.version>
+        <carbon.kernel.version>5.2.17</carbon.kernel.version>
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
-        <carbon.kernel.pax.version>5.2.16</carbon.kernel.pax.version>
+        <carbon.kernel.pax.version>5.2.17</carbon.kernel.pax.version>
 
         <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
-        <carbon.datasources.version>1.1.10</carbon.datasources.version>
+        <carbon.datasources.version>1.1.11</carbon.datasources.version>
         <carbon.metrics.version>2.3.13</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
@@ -1008,7 +1008,7 @@
         <guava.version>23.0</guava.version>
         <guava.bundle.version>23.0.0</guava.bundle.version>
         <gson.version>2.8.5</gson.version>
-        <quartz.version>2.1.1.wso2v1</quartz.version>
+        <quartz.version>2.3.0.wso2v2</quartz.version>
         <metrics.version>3.2.5</metrics.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-collections4.version>4.0</commons-collections4.version>
@@ -1020,7 +1020,7 @@
         <com.fasterxml.jackson.core.version>2.8.9</com.fasterxml.jackson.core.version>
         <io.swagger.version>1.5.22</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
-        <pax.logging.api.version>2.1.0</pax.logging.api.version>
+        <pax.logging.api.version>2.1.0-wso2v3</pax.logging.api.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
 
         <!--Event simulator-->
@@ -1062,7 +1062,7 @@
         <siddhi.io.websocket.version>3.0.2</siddhi.io.websocket.version>
         <siddhi.io.cdc.version>2.0.12</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
-        <siddhi.io.nats.version>2.0.14</siddhi.io.nats.version>
+        <siddhi.io.nats.version>2.0.15</siddhi.io.nats.version>
         <siddhi.io.googlepubsub.version>2.0.3</siddhi.io.googlepubsub.version>
         <siddhi.io.hl7.version>3.0.1</siddhi.io.hl7.version>
         <siddhi.io.snmp.version>2.0.1</siddhi.io.snmp.version>
@@ -1080,7 +1080,7 @@
 
         <siddhi.store.mongodb.version>2.1.2</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
-        <siddhi.store.rdbms.version>7.0.13</siddhi.store.rdbms.version>
+        <siddhi.store.rdbms.version>7.0.14</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
         <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
