--- a/pom.xml
+++ b/pom.xml
@@ -469,16 +469,6 @@
                 <version>${msf4j.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${com.fasterxml.jackson.core.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version>${com.fasterxml.jackson.core.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${io.swagger.version}</version>
@@ -487,16 +477,6 @@
                 <groupId>javax.ws.rs</groupId>
                 <artifactId>javax.ws.rs-api</artifactId>
                 <version>${javax.ws.rs-api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-joda</artifactId>
-                <version>${com.fasterxml.jackson.core.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.jaxrs</groupId>
-                <artifactId>jackson-jaxrs-json-provider</artifactId>
-                <version>${com.fasterxml.jackson.core.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -923,10 +903,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.58</carbon.analytics.version>
+        <carbon.analytics.version>3.0.59-SNAPSHOT</carbon.analytics.version>
         <siddhi.version>5.1.22</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.58</carbon.analytics-common.version>
+        <carbon.analytics-common.version>6.1.59-SNAPSHOT</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -955,7 +935,7 @@
         <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
         <carbon.datasources.version>1.1.11</carbon.datasources.version>
-        <carbon.metrics.version>2.3.13</carbon.metrics.version>
+        <carbon.metrics.version>2.3.15</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
@@ -1016,8 +996,7 @@
         <common.collections4.version>4.0</common.collections4.version>
 
         <!--MSF4J related-->
-        <msf4j.version>2.8.4</msf4j.version>
-        <com.fasterxml.jackson.core.version>2.8.9</com.fasterxml.jackson.core.version>
+        <msf4j.version>2.8.5-SNAPSHOT</msf4j.version>
         <io.swagger.version>1.5.22</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
         <pax.logging.api.version>2.1.0-wso2v3</pax.logging.api.version>
@@ -1037,7 +1016,7 @@
         <project.scm.id>scm-server</project.scm.id>
 
         <!--Siddhi Extension Versions-->
-        <siddhi.execution.math.version>5.0.5</siddhi.execution.math.version>
+        <siddhi.execution.math.version>5.0.6-SNAPSHOT</siddhi.execution.math.version>
         <siddhi.execution.regex.version>5.0.7</siddhi.execution.regex.version>
         <siddhi.execution.string.version>5.0.12</siddhi.execution.string.version>
         <siddhi.execution.time.version>5.0.8</siddhi.execution.time.version>
@@ -1057,9 +1036,9 @@
         <siddhi.io.rabbitmq.version>3.0.7</siddhi.io.rabbitmq.version>
         <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
         <siddhi.io.kafka.version>5.0.16</siddhi.io.kafka.version>
-        <siddhi.io.http.version>2.3.4</siddhi.io.http.version>
+        <siddhi.io.http.version>2.3.5-SNAPSHOT</siddhi.io.http.version>
         <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
-        <siddhi.io.websocket.version>3.0.2</siddhi.io.websocket.version>
+        <siddhi.io.websocket.version>3.0.3-SNAPSHOT</siddhi.io.websocket.version>
         <siddhi.io.cdc.version>2.0.12</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
         <siddhi.io.nats.version>2.0.15</siddhi.io.nats.version>
@@ -1070,15 +1049,15 @@
         <siddhi.io.gcs.version>1.0.2</siddhi.io.gcs.version>
         <siddhi.io.s3.version>1.0.4</siddhi.io.s3.version>
 
-        <siddhi.map.json.version>5.2.2</siddhi.map.json.version>
-        <siddhi.map.avro.version>2.2.2</siddhi.map.avro.version>
+        <siddhi.map.json.version>5.2.3-SNAPSHOT</siddhi.map.json.version>
+        <siddhi.map.avro.version>2.2.3-SNAPSHOT</siddhi.map.avro.version>
         <siddhi.map.binary.version>2.1.1</siddhi.map.binary.version>
         <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
         <siddhi.map.xml.version>5.2.2</siddhi.map.xml.version>
         <siddhi.map.keyvalue.version>2.1.2</siddhi.map.keyvalue.version>
         <siddhi.map.csv.version>2.1.1</siddhi.map.csv.version>
 
-        <siddhi.store.mongodb.version>2.1.2</siddhi.store.mongodb.version>
+        <siddhi.store.mongodb.version>2.1.3-SNAPSHOT</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
         <siddhi.store.rdbms.version>7.0.14</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
