--- a/pom.xml
+++ b/pom.xml
@@ -903,10 +903,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.59-SNAPSHOT</carbon.analytics.version>
-        <siddhi.version>5.1.22</siddhi.version>
+        <carbon.analytics.version>3.0.59</carbon.analytics.version>
+        <siddhi.version>5.1.23</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.59-SNAPSHOT</carbon.analytics-common.version>
+        <carbon.analytics-common.version>6.1.59</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -996,7 +996,7 @@
         <common.collections4.version>4.0</common.collections4.version>
 
         <!--MSF4J related-->
-        <msf4j.version>2.8.5-SNAPSHOT</msf4j.version>
+        <msf4j.version>2.8.5</msf4j.version>
         <io.swagger.version>1.5.22</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
         <pax.logging.api.version>2.1.0-wso2v3</pax.logging.api.version>
@@ -1016,7 +1016,7 @@
         <project.scm.id>scm-server</project.scm.id>
 
         <!--Siddhi Extension Versions-->
-        <siddhi.execution.math.version>5.0.6-SNAPSHOT</siddhi.execution.math.version>
+        <siddhi.execution.math.version>5.0.6</siddhi.execution.math.version>
         <siddhi.execution.regex.version>5.0.7</siddhi.execution.regex.version>
         <siddhi.execution.string.version>5.0.12</siddhi.execution.string.version>
         <siddhi.execution.time.version>5.0.8</siddhi.execution.time.version>
@@ -1036,9 +1036,9 @@
         <siddhi.io.rabbitmq.version>3.0.7</siddhi.io.rabbitmq.version>
         <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
         <siddhi.io.kafka.version>5.0.16</siddhi.io.kafka.version>
-        <siddhi.io.http.version>2.3.5-SNAPSHOT</siddhi.io.http.version>
+        <siddhi.io.http.version>2.3.5</siddhi.io.http.version>
         <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
-        <siddhi.io.websocket.version>3.0.3-SNAPSHOT</siddhi.io.websocket.version>
+        <siddhi.io.websocket.version>3.0.3</siddhi.io.websocket.version>
         <siddhi.io.cdc.version>2.0.12</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
         <siddhi.io.nats.version>2.0.15</siddhi.io.nats.version>
@@ -1049,21 +1049,21 @@
         <siddhi.io.gcs.version>1.0.2</siddhi.io.gcs.version>
         <siddhi.io.s3.version>1.0.4</siddhi.io.s3.version>
 
-        <siddhi.map.json.version>5.2.3-SNAPSHOT</siddhi.map.json.version>
-        <siddhi.map.avro.version>2.2.3-SNAPSHOT</siddhi.map.avro.version>
+        <siddhi.map.json.version>5.2.3</siddhi.map.json.version>
+        <siddhi.map.avro.version>2.2.3</siddhi.map.avro.version>
         <siddhi.map.binary.version>2.1.1</siddhi.map.binary.version>
         <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
         <siddhi.map.xml.version>5.2.2</siddhi.map.xml.version>
         <siddhi.map.keyvalue.version>2.1.2</siddhi.map.keyvalue.version>
         <siddhi.map.csv.version>2.1.1</siddhi.map.csv.version>
 
-        <siddhi.store.mongodb.version>2.1.3-SNAPSHOT</siddhi.store.mongodb.version>
+        <siddhi.store.mongodb.version>2.1.4</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
-        <siddhi.store.rdbms.version>7.0.14</siddhi.store.rdbms.version>
+        <siddhi.store.rdbms.version>7.0.15</siddhi.store.rdbms.version>
         <siddhi.store.hbase.version>5.0.0</siddhi.store.hbase.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
-        <siddhi.store.redis.version>3.1.1</siddhi.store.redis.version>
-        <siddhi.store.elasticsearch.version>3.2.1</siddhi.store.elasticsearch.version>
+        <siddhi.store.redis.version>3.1.3</siddhi.store.redis.version>
+        <siddhi.store.elasticsearch.version>3.2.2</siddhi.store.elasticsearch.version>
 
         <siddhi.script.js.version>5.0.4</siddhi.script.js.version>
 
