--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2</groupId>
         <artifactId>wso2</artifactId>
-        <version>5.1</version>
+        <version>5.3</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -904,9 +904,9 @@
     </build>
     <properties>
         <carbon.analytics.version>3.0.63-SNAPSHOT</carbon.analytics.version> <!-- TODO release and bump -->
-        <siddhi.version>5.1.25</siddhi.version>
+        <siddhi.version>5.1.25-SNAPSHOT</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.59</carbon.analytics-common.version> <!-- TODO check if this is needed -->
+        <carbon.analytics-common.version>6.1.60-SNAPSHOT</carbon.analytics-common.version> <!-- TODO check if this is needed -->
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -928,14 +928,14 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.2.18-SNAPSHOT</carbon.kernel.version> <!-- TODO release and bump -->
+        <carbon.kernel.version>5.3.0</carbon.kernel.version> <!-- TODO release and bump -->
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
         <carbon.kernel.pax.version>5.2.17</carbon.kernel.pax.version>
 
         <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
         <carbon.datasources.version>1.1.11</carbon.datasources.version>
-        <carbon.metrics.version>2.3.8</carbon.metrics.version>
+        <carbon.metrics.version>2.3.16-SNAPSHOT</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
@@ -955,7 +955,7 @@
         <maven.exec.plugin.version>1.5.0</maven.exec.plugin.version>
 
         <!-- json dependencies -->
-        <gson.version>2.8.5</gson.version>
+        <gson.version>2.9.1</gson.version>
         <gson.import.version.range>[2.7, 3.0.0)</gson.import.version.range>
         <jayway.jsonpath.version>2.2.0</jayway.jsonpath.version>
         <jayway.jsonpath.import.version.range>[2.2.0,2.3.0)</jayway.jsonpath.import.version.range>
@@ -987,7 +987,6 @@
         <disruptor.version>3.4.2.wso2v1</disruptor.version>
         <guava.version>23.0</guava.version>
         <guava.bundle.version>23.0.0</guava.bundle.version>
-        <gson.version>2.8.5</gson.version>
         <quartz.version>2.3.0.wso2v2</quartz.version>
         <metrics.version>3.2.5</metrics.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
@@ -997,7 +996,6 @@
 
         <!--MSF4J related-->
         <msf4j.version>2.8.7-SNAPSHOT</msf4j.version> <!-- TODO release and bump -->
-        <com.fasterxml.jackson.core.version>2.9.10</com.fasterxml.jackson.core.version>
         <io.swagger.version>1.6.7</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
         <pax.logging.api.version>2.1.0-wso2v3</pax.logging.api.version>
@@ -1096,7 +1094,7 @@
         <com.sun.xml.bind.version>2.4.0-b180830.0438</com.sun.xml.bind.version>
         <org.apache.geronimo.spec.version>1.1</org.apache.geronimo.spec.version>
         <com.sun.istack.version>3.0.8</com.sun.istack.version>
-        <com.sun.activation.version>1.2.0</com.sun.activation.version>
+        <org.wso2.orbit.javax.activation.version>1.1.1.wso2v3</org.wso2.orbit.javax.activation.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
