--- a/pom.xml
+++ b/pom.xml
@@ -903,10 +903,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.63-SNAPSHOT</carbon.analytics.version> <!-- TODO release and bump -->
-        <siddhi.version>5.1.25-SNAPSHOT</siddhi.version>
+        <carbon.analytics.version>3.0.64</carbon.analytics.version> <!-- TODO release and bump -->
+        <siddhi.version>5.1.25</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.60-SNAPSHOT</carbon.analytics-common.version> <!-- TODO check if this is needed -->
+        <carbon.analytics-common.version>6.1.60</carbon.analytics-common.version> <!-- TODO check if this is needed -->
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -928,14 +928,14 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.3.0</carbon.kernel.version> <!-- TODO release and bump -->
+        <carbon.kernel.version>5.3.0-alpha</carbon.kernel.version>
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
         <carbon.kernel.pax.version>5.2.17</carbon.kernel.pax.version>
 
         <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
-        <carbon.datasources.version>1.1.11</carbon.datasources.version>
-        <carbon.metrics.version>2.3.16-SNAPSHOT</carbon.metrics.version>
+        <carbon.datasources.version>1.1.13</carbon.datasources.version>
+        <carbon.metrics.version>2.3.16</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
@@ -987,7 +987,7 @@
         <disruptor.version>3.4.2.wso2v1</disruptor.version>
         <guava.version>23.0</guava.version>
         <guava.bundle.version>23.0.0</guava.bundle.version>
-        <quartz.version>2.3.0.wso2v2</quartz.version>
+        <quartz.version>2.3.0.wso2v3</quartz.version>
         <metrics.version>3.2.5</metrics.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-collections4.version>4.0</commons-collections4.version>
@@ -995,7 +995,7 @@
         <common.collections4.version>4.0</common.collections4.version>
 
         <!--MSF4J related-->
-        <msf4j.version>2.8.7-SNAPSHOT</msf4j.version> <!-- TODO release and bump -->
+        <msf4j.version>2.8.7</msf4j.version>
         <io.swagger.version>1.6.7</io.swagger.version>
         <javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
         <pax.logging.api.version>2.1.0-wso2v3</pax.logging.api.version>
