--- a/pom.xml
+++ b/pom.xml
@@ -903,10 +903,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.64</carbon.analytics.version> <!-- TODO release and bump -->
-        <siddhi.version>5.1.25</siddhi.version>
+        <carbon.analytics.version>3.0.66</carbon.analytics.version> <!-- TODO release and bump -->
+        <siddhi.version>5.1.26</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.60</carbon.analytics-common.version> <!-- TODO check if this is needed -->
+        <carbon.analytics-common.version>6.1.63</carbon.analytics-common.version> <!-- TODO check if this is needed -->
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -928,14 +928,14 @@
 
         <!-- Dependencies -->
         <open.tracing.version>0.31.0</open.tracing.version>
-        <carbon.kernel.version>5.3.0-alpha</carbon.kernel.version>
+        <carbon.kernel.version>5.3.0</carbon.kernel.version>
         <carbon.kernel.package.import.version.range>[5.2.0, 6.0.0)</carbon.kernel.package.import.version.range>
         <carbon.kernel.pax.version>5.2.17</carbon.kernel.pax.version>
 
         <carbon.deployment.version>5.2.2</carbon.deployment.version>
 
-        <carbon.datasources.version>1.1.13</carbon.datasources.version>
-        <carbon.metrics.version>2.3.16</carbon.metrics.version>
+        <carbon.datasources.version>1.1.14</carbon.datasources.version>
+        <carbon.metrics.version>2.3.17</carbon.metrics.version>
         <carbon.jndi.version>1.0.5</carbon.jndi.version>
 
         <carbon.cache.version>1.1.3</carbon.cache.version>
@@ -1028,17 +1028,17 @@
         <siddhi.execution.unique.version>5.0.5</siddhi.execution.unique.version>
         <siddhi.execution.env.version>2.0.0</siddhi.execution.env.version>
 
-        <siddhi.io.file.version>2.0.18</siddhi.io.file.version>
+        <siddhi.io.file.version>2.0.19</siddhi.io.file.version>
         <siddhi.io.tcp.version>3.0.6</siddhi.io.tcp.version>
         <siddhi.io.jms.version>2.0.5</siddhi.io.jms.version>
-        <siddhi.io.email.version>2.0.7</siddhi.io.email.version>
+        <siddhi.io.email.version>2.0.8</siddhi.io.email.version>
         <siddhi.io.rabbitmq.version>3.0.7</siddhi.io.rabbitmq.version>
         <siddhi.io.mqtt.version>3.0.1</siddhi.io.mqtt.version>
-        <siddhi.io.kafka.version>5.0.16</siddhi.io.kafka.version>
-        <siddhi.io.http.version>2.3.5</siddhi.io.http.version>
+        <siddhi.io.kafka.version>5.0.17</siddhi.io.kafka.version>
+        <siddhi.io.http.version>2.3.6</siddhi.io.http.version>
         <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
         <siddhi.io.websocket.version>3.0.3</siddhi.io.websocket.version>
-        <siddhi.io.cdc.version>2.0.12</siddhi.io.cdc.version>
+        <siddhi.io.cdc.version>2.0.13</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
         <siddhi.io.nats.version>2.0.15</siddhi.io.nats.version>
         <siddhi.io.googlepubsub.version>2.0.3</siddhi.io.googlepubsub.version>
@@ -1054,11 +1054,11 @@
         <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
         <siddhi.map.xml.version>5.2.2</siddhi.map.xml.version>
         <siddhi.map.keyvalue.version>2.1.2</siddhi.map.keyvalue.version>
-        <siddhi.map.csv.version>2.1.1</siddhi.map.csv.version>
+        <siddhi.map.csv.version>2.1.2</siddhi.map.csv.version>
 
         <siddhi.store.mongodb.version>2.1.4</siddhi.store.mongodb.version>
         <siddhi.store.solr.version>2.0.0</siddhi.store.solr.version>
-        <siddhi.store.rdbms.version>7.0.16</siddhi.store.rdbms.version>
+        <siddhi.store.rdbms.version>7.0.17</siddhi.store.rdbms.version>
         <siddhi.store.cassandra.version>2.0.0</siddhi.store.cassandra.version>
         <siddhi.store.redis.version>3.1.3</siddhi.store.redis.version>
         <siddhi.store.elasticsearch.version>3.2.2</siddhi.store.elasticsearch.version>
