--- a/pom.xml
+++ b/pom.xml
@@ -895,10 +895,10 @@
         </pluginManagement>
     </build>
     <properties>
-        <carbon.analytics.version>3.0.66</carbon.analytics.version> <!-- TODO release and bump -->
-        <siddhi.version>5.1.26</siddhi.version>
+        <carbon.analytics.version>3.0.67</carbon.analytics.version>
+        <siddhi.version>5.1.27</siddhi.version>
 
-        <carbon.analytics-common.version>6.1.63</carbon.analytics-common.version> <!-- TODO check if this is needed -->
+        <carbon.analytics-common.version>6.1.63</carbon.analytics-common.version>
         <!-- Maven plugins -->
         <!--Bundle Plugin - Overridden from parent due to a bug in latest version related to capability providers-->
         <maven.bundle.plugin.version>2.5.4</maven.bundle.plugin.version>
@@ -1031,7 +1031,7 @@
         <siddhi.io.http.version>2.3.6</siddhi.io.http.version>
         <siddhi.io.sqs.version>3.0.1</siddhi.io.sqs.version>
         <siddhi.io.websocket.version>3.0.3</siddhi.io.websocket.version>
-        <siddhi.io.cdc.version>2.0.13</siddhi.io.cdc.version>
+        <siddhi.io.cdc.version>2.0.14</siddhi.io.cdc.version>
         <siddhi.io.prometheus.version>2.1.3</siddhi.io.prometheus.version>
         <siddhi.io.nats.version>2.0.15</siddhi.io.nats.version>
         <siddhi.io.googlepubsub.version>2.0.3</siddhi.io.googlepubsub.version>
@@ -1041,7 +1041,7 @@
         <siddhi.io.gcs.version>1.0.2</siddhi.io.gcs.version>
         <siddhi.io.s3.version>1.0.4</siddhi.io.s3.version>
 
-        <siddhi.map.json.version>5.2.3</siddhi.map.json.version>
+        <siddhi.map.json.version>5.2.4</siddhi.map.json.version>
         <siddhi.map.avro.version>2.2.3</siddhi.map.avro.version>
         <siddhi.map.binary.version>2.1.1</siddhi.map.binary.version>
         <siddhi.map.text.version>2.1.1</siddhi.map.text.version>
